as4: minor text modifications
Signed-off-by: Ergys Dona <errikosd@gmail.com>

--- a/04 - Applied ML/Homework4.ipynb
+++ b/04 - Applied ML/Homework4.ipynb
@@ -762,7 +762,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some differences between the individuals of the two groups can also be observed regarding their years of education. Indicatively, we can mention that, the largest percentage of treated individuals (~23%) has had around 11 years of education, while the largest percentage of non-treated people (~27%) has had around 12-13 years of education. By looking at the histograms and boxplots, however, we can see that the general shape of the distributions doesn't seem to differ that much between the two groups. More specifically, in both groups, the biggest percentages seem to be concentrated in the middle values of the histogram (8-13 y.o.e), while smaller majorities are concentrated on the sides of the histogram."
+    "Some differences between the individuals of the two groups can also be observed regarding their years of education. Indicatively, we can mention that, the largest percentage of treated individuals (~23%) has had around 11 years of education, while the largest percentage of non-treated people (~27%) has had around 12-13 years of education. By looking at the histograms and boxplots, however, we can see that the general shape of the distributions doesn't seem to differ that much between the two groups. More specifically, in both groups, the biggest percentages seem to be concentrated in the middle values of the histogram (8-13 y.o.e), while smaller percentages are concentrated on the sides of the histogram."
    ]
   },
   {
@@ -1179,7 +1179,7 @@
    "cell_type": "code",
    "execution_count": 24,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -1751,7 +1751,9 @@
   {
    "cell_type": "code",
    "execution_count": 37,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# Create a bipartite graph consisted of the treated individuals and the non-treated individuals\n",
@@ -2911,7 +2913,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The two distributions show a lot of similarities after the matching, therefore we consider this feature as balanced."
+    "The two distributions show a lot of similarities after the matching, therefore we consider this feature as well balanced."
    ]
   },
   {
@@ -2950,7 +2952,7 @@
    "source": [
     "In this task we will try to balance the two features that were judged as \"unbalanced\" during the previous task. \n",
     "\n",
-    "First, we will try to balance the __race__ feature, by spliting our initial data by race (black/white/hispanic) and exposure to treatment (treated/control) and by matching the treated and non-treated individuals of each race separately, using the propensity scores that we calculated in task 3:"
+    "First, we will try to balance the __race__ feature, by spliting our initial data by race (black/white/hispanic) and by exposure to treatment (treated/control) and by matching the treated and non-treated individuals of each race separately, using the propensity scores that we calculated in task 3:"
    ]
   },
   {
@@ -2983,7 +2985,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We have split the treated and control groups according to race. We will now proceed to only match people of the same race, according to their propensity scores."
+    "We have split the treated and control groups according to race. We will now proceed to only match treated individuals with non-treated individuals of the same race, according to the similarity of their propensity scores."
    ]
   },
   {
@@ -3215,7 +3217,7 @@
    "source": [
     "We observe that by forcing the treated and non-treated individuals to have exactly the same race, while also comparing their propensity scores, like before, the age feature seems to be a lot more balanced as well, now. The two distributions, although not entirely similar, have a similar histogram shape, with higher percentages concentrated in the younger age groups (15-20 y.o.) and a pretty steady decline of the percentages in older age groups. After observing the two distributions, we decided that we can tolerate the current discrepancy that can be observed in the distribution of people's age in the two groups, and thus we will not try to balance this feature any further. \n",
     "\n",
-    "Generally, by forcing certain features to be more balanced, it seems that some other features become more unbalanced (as we will see for feature 're74' in a little while), therefore there is a certain tradeoff to each tweak that we choose to do. For the purposes of our analysis, we decided that we will stick with the current matching, in order to avoid \"messing\" with already balanced features in order to \"force-balance\" the age feature."
+    "Generally, by forcing certain features to be more balanced, it seems that some other features become more unbalanced (e.g. as we will see for feature 're74' further below), therefore there is a certain tradeoff to each tweak that we choose to do. For the purposes of our analysis, we decided that we will stick with the current matching, in order to avoid \"messing\" with already balanced features in order to \"force-balance\" the age feature."
    ]
   },
   {
@@ -3368,7 +3370,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that the two distributions look very similar, after our second matching, in terms of histogram shape, mean value and standard deviation as well as the information that we get from the boxplot. The feature seems to have been balanced even more, compared to our first matching."
+    "We observe that the two distributions look very similar, after our second matching, in terms of histogram shape, mean value and standard deviation as well as the information that we get from the boxplots. The feature seems to have been balanced even more, compared to our first matching."
    ]
   },
   {
@@ -3842,7 +3844,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The 're74' feature seems to have been destabilized a bit, compared to the results that we got after the first matching. However, it is considered pretty balanced for the purposes of our analysis."
+    "The 're74' feature seems to have been a bit destabilised, compared to the results that we got after the first matching (the difference of the percentages of unemployed treated and non-treated people is a bit bigger now compared to what we observed in task 4). However, it is considered pretty balanced for the purposes of our analysis."
    ]
   },
   {
@@ -3993,7 +3995,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We can observe that the second matching has achieved a pretty good balance in this feature."
+    "We can observe that the second matching has achieved a very good balance in this feature."
    ]
   },
   {
@@ -4172,7 +4174,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After all our previous processing of the data, we can now make significantly safer conclusions about the data. It turns out that the job training program has been __effective__ after all. We observe the positive results of the program if we notice that the percentage of unemployed people (re78 = 0) in the treated group is now much lower (~29%) than in the control group (~42%). Furthermore, as we can observe from the boxplots above, the maximum income of people during 1978 is higher for treated people (~23,000) than for non-treated ones (~19,000) and there are also a few outliers in the treated group, with incomes much higher than the rest of the people in both groups. Finally, we notice that the mean values in the two groups vary significantly from one another (~6600 for treated individuals and ~1800 for non-treated ones). This means that, on average, people who received the treatment had an income of around 5,000 more than non-treated people, during 1978; a difference which is not at all negligible. "
+    "After all our previous processing of the data, we can now make significantly safer conclusions from the data. It turns out that the job training program has been __effective__ after all. We observe the positive results of the program if we notice that the percentage of unemployed people (re78 = 0) in the treated group is now much lower (~29%) than in the control group (~42%). Furthermore, as we can observe from the boxplots above, the maximum income of people during 1978 is higher for treated people (~23,000) than for non-treated ones (~19,000) and there are also a few outliers in the treated group, with incomes much higher than the rest of the peoples' in both groups. Finally, we notice that the mean values in the two groups vary significantly from one another (~6600 for treated individuals and ~1800 for non-treated ones). This means that, on average, people who received the treatment had an income of around 5,000 more than non-treated people, during 1978; a difference which is not at all negligible. "
    ]
   },
   {
@@ -4556,7 +4558,9 @@
   {
    "cell_type": "code",
    "execution_count": 102,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "stop = stopwords.words('english')\n",
@@ -4685,7 +4689,9 @@
   {
    "cell_type": "code",
    "execution_count": 106,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# add the constructed lists as columns (via pd.Series)\n",
