Add latest version of milestone2 notebook

--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -18,7 +18,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The purpose of this project is to analyse the \"interest\" that users of the Twitter social network show towards events happening around the globe. The analysis seeks to \"connect\" tweets from Switzerland and all over the world with categories of events and specific events, based on a number of variables, e.g. the coverage of the event (how many people were interested or expressed an opinion about it on Twitter), how much Twitter users keep tweeting about an event in the following months after an event etc. With the general belief being that the social network world focuses more on less significant events than more significant onew, we would like to compare and contrast the impact of serious vs. less serious events and draw conclusions about the population's behaviour. \n",
+    "The purpose of this project is to analyse the \"interest\" that users of the Twitter social network show towards events happening around the globe. The analysis seeks to \"connect\" tweets from Switzerland and all over the world with categories of events and specific events, based on a number of variables, e.g. the coverage of the event (how many people were interested or expressed an opinion about it on Twitter), how much Twitter users keep tweeting about an event in the following months after an event etc. With the general belief being that the social network world focuses more on less significant events than more significant ones, we would like to compare and contrast the impact of serious vs. less serious events and draw conclusions about the population's behaviour. \n",
     "\n",
     "In order to do so, we are going to use the dataset of Swiss tweets and the Twitter-leon dataset of global tweets. Both datasets offer a number of columns that can be exploited in the contexts of this analysis, as we will see below. Before we begin the analysis, however, it is important to define its premises and its limitations, either defined by us or imposed by the datasets themselves.\n",
     "\n",
@@ -63,10 +63,109 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 39,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'_id': '1466077402371700047',\n",
+       "  '_index': 'merged_content_2016_06_10_to_2016_06_16_2',\n",
+       "  '_score': 0.006501974,\n",
+       "  '_source': {'author_avatar_img': 'https://pbs.twimg.com/profile_images/2873283197/058c9344ea769833e91065713ce621e6_bigger.jpeg',\n",
+       "   'author_gender': 'MALE',\n",
+       "   'author_handle': 'AlexLimacher',\n",
+       "   'author_link': 'https://twitter.com/AlexLimacher',\n",
+       "   'author_name': 'Alexander Limacher',\n",
+       "   'author_user_id': '351548364',\n",
+       "   'bucket': 1466077200093,\n",
+       "   'canonical': 'https://www.twitter.com/AlexLimacher/status/743407770360119296',\n",
+       "   'date_found': '2016-06-16T11:43:22Z',\n",
+       "   'domain': 'twitter.com',\n",
+       "   'geo_location': 'Switzerland',\n",
+       "   'geo_location_id': '4e7c21fd2af027c6',\n",
+       "   'hashcode': 'Lw53uPRDP_UUHns6Y_ADhOklr6U',\n",
+       "   'index_method': 'TWITTER_TASK',\n",
+       "   'lang': 'de',\n",
+       "   'last_updated': '2016-06-16T11:43:22Z',\n",
+       "   'links': ['https://www.twitter.com/hashtag/EU?src=hash',\n",
+       "    'https://www.twitter.com/hashtag/brexit?src=hash',\n",
+       "    'https://www.twitter.com/hashtag/schwexit?src=hash'],\n",
+       "   'main': 'Wir könnten uns ja mit den Briten verbrüdern und einen Tunnel unter der #EU durch von Dover direkt nach Airolo buddeln. #brexit #schwexit',\n",
+       "   'main_authoritative': True,\n",
+       "   'main_checksum': 'FreWuPx55BDqJu4HYhqfPfBwyQI',\n",
+       "   'main_format': 'TEXT',\n",
+       "   'main_length': 137,\n",
+       "   'metadata_score': 324,\n",
+       "   'permalink': 'https://www.twitter.com/AlexLimacher/status/743407770360119296',\n",
+       "   'published': '2016-06-16T11:39:58Z',\n",
+       "   'replied': False,\n",
+       "   'resource': 'https://twitter.com/AlexLimacher/status/743407770360119296',\n",
+       "   'sentiment': 'NEUTRAL',\n",
+       "   'sequence': 1466077402371700047,\n",
+       "   'sequence_range': 4293,\n",
+       "   'site': 'twitter.com',\n",
+       "   'source_content_checksum': 'vyRUheqcSrEaf8ehOU-431DGXKM',\n",
+       "   'source_content_length': 272817,\n",
+       "   'source_created': '2011-08-01T00:00:00Z',\n",
+       "   'source_date_found': '2015-10-07T21:52:16Z',\n",
+       "   'source_description': '<p>Sekret&auml;r SVP Sursee, Experte f&uuml;r praktisch alles.</p>',\n",
+       "   'source_favicon_height': 0,\n",
+       "   'source_favicon_width': 0,\n",
+       "   'source_favorites': 518,\n",
+       "   'source_followers': 479,\n",
+       "   'source_following': 783,\n",
+       "   'source_handle': 'AlexLimacher',\n",
+       "   'source_hashcode': '6dSLVbe6oJAD8VAxCqS1yG-Iy5I',\n",
+       "   'source_http_status': 200,\n",
+       "   'source_image_height': 0,\n",
+       "   'source_image_src': 'https://pbs.twimg.com/profile_images/2873283197/058c9344ea769833e91065713ce621e6_400x400.jpeg',\n",
+       "   'source_image_width': 0,\n",
+       "   'source_last_posted': '2014-11-24T11:46:29Z',\n",
+       "   'source_last_published': '2015-10-07T22:17:20Z',\n",
+       "   'source_last_updated': '2015-10-07T22:17:20Z',\n",
+       "   'source_likes': 0,\n",
+       "   'source_link': 'https://twitter.com/AlexLimacher',\n",
+       "   'source_location': 'Schenkon',\n",
+       "   'source_parsed_posts': 0,\n",
+       "   'source_parsed_posts_max': 0,\n",
+       "   'source_profiles': ['http://blog.limi.ch'],\n",
+       "   'source_publisher_subtype': 'twitter',\n",
+       "   'source_publisher_type': 'MICROBLOG',\n",
+       "   'source_resource': 'https://twitter.com/AlexLimacher',\n",
+       "   'source_setting_author_policy': 'DEFAULT',\n",
+       "   'source_setting_index_strategy': 'DEFAULT',\n",
+       "   'source_setting_minimum_content_metadata_score': 0,\n",
+       "   'source_setting_update_strategy': 'CYCLICAL',\n",
+       "   'source_spam_probability': 0.0,\n",
+       "   'source_title': 'Alexander Limacher',\n",
+       "   'source_update_interval': 3600000,\n",
+       "   'source_user_interactions': 0,\n",
+       "   'source_verified': False,\n",
+       "   'tags': ['EU', 'brexit', 'schwexit'],\n",
+       "   'type': 'POST',\n",
+       "   'version': '6.0.157'},\n",
+       "  '_type': 'content'}]"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "import pandas as pd\n",
+    "import json\n",
+    "\n",
+    "DATA_DIR = '.'\n",
+    "\n",
+    "# swiss_tweets = pd.read_json(os.path.join(DATA_DIR, 'sample.json'))\n",
+    "with open(os.path.join(DATA_DIR, 'sample.json')) as f:\n",
+    "    swiss_tweets = json.load(f)\n",
+    "\n",
+    "swiss_tweets"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -147,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {
     "scrolled": true
    },
@@ -241,22 +340,17 @@
        "4         _irem61_  RT @DHC_Music: Terrorism ... #FreePalestina ht...  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "import os\n",
-    "import pandas as pd\n",
-    "\n",
-    "DATA_DIR = '.'\n",
-    "\n",
-    "data = pd.read_csv(os.path.join(DATA_DIR, 'head.csv'), \n",
-    "                 delimiter='\\t',\n",
-    "                 header = None,\n",
-    "                 names=['language', 'tweet_id', 'datetime', 'username', 'tweet_text'])\n",
-    "data.head(5)"
+    "global_tweets = pd.read_csv(os.path.join(DATA_DIR, 'head.csv'), \n",
+    "                            delimiter='\\t',\n",
+    "                            header = None,\n",
+    "                            names=['language', 'tweet_id', 'datetime', 'username', 'tweet_text'])\n",
+    "global_tweets.head(5)"
    ]
   },
   {
@@ -786,14 +880,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Chapter 2: Observations over time"
+    "### Chapter 2: Observations regarding event categories"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The time limits of our observations "
+    "In this chapter, we are just going to restate the final goal of our analysis, which has already been described in the introduction. That is to make observations about the categories of events that seem to draw the most attention of Twitter users. That being said, we are going to fill our list of events with even more events from each one of our specified categories and we will then compare events from different categories to one another. We may also compare events from the same category to one another, in order to draw conclusions about their relative importance in their corresponding category."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Chapter 3: Observations over time"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our final analysis, there a few choices of time periods in which we can frame our observations. One choice is to not take into account the time period that two events occured, at all, while comparing them. Another option is to only compare events that have happened during the same period of time, e.g. during the same year or even the same month. Our approach is to use all of these choices, in order to determine the impact the time period has in the Twitter users' reaction regarding a type of event."
    ]
   },
   {
@@ -804,11 +912,95 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "In this part, we are going to roughly outline the timeline that we are going to follow, while working on our final analysis. This part will have been filled in up until Milestone 3 of the project."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 1: Swiss tweets dataset analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 2: Observations about events that occured in the same month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 3: Observations about events that occured in the same year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 4: Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 2: Global tweets dataset analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 2: Observations about events that occured in the same month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 3: Observations about events that occured in the same year"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 4: Observations about events that occured in different years"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 5: Conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Section 3: Final conclusions"
+   ]
   }
  ],
  "metadata": {
