--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1280,7 +1280,61 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Under the URL: https://errikos.github.io/ada-showoff/thedatasets/ we describe some useful insights we found regarding the datasets (leon and swiss tweets), with graphs and plots using Plotly."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Firstly, we plot the language distribution of swiss tweets (we selected only the languages that exist in both swiss' and leon's datasets).\n",
+    "\n",
+    "\n",
+    "The scripts that were used to extract the count numbers exist under the path **ADAExercises2017/project/src/count/**\n",
+    "\n",
+    "The scripts under the path **ADAExercises2017/project/src/plot/** were used to plot the results obtained from the above  count scripts."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "***Due to the unavailability of the cluster the last days before the submission of this part of the project, we did not manage to run the analysis we had in mind for the leon tweets dataset.***\n",
+    "\n",
+    "***Nevertheless, we managed to obtain useful insights from the swiss' tweets dataset. ***"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### Section 1: Swiss tweets dataset analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dataset Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scripts used:\n",
+    "\n",
+    "- job_swiss_count_all.py\n",
+    "\n",
+    "Counts all tweets in swiss tweets dataset.\n",
+    "\n",
+    "- swiss_by_category.py\n",
+    "\n",
+    "Count tweets of each category.\n",
+    "\n",
+    "- swiss_stats.py\n",
+    "\n",
+    "Computes counts by language, counts by region, counts by sentiment, counts by day, date range\n"
    ]
   },
   {
@@ -1316,6 +1370,32 @@
    "metadata": {},
    "source": [
     "### Section 2: Global tweets dataset analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Dataset Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Scripts used:\n",
+    "    \n",
+    "- job_tweets_by_lang.py\n",
+    "\n",
+    "Counts tweets by language.\n",
+    "\n",
+    "- job_tweets_count_all.py\n",
+    "\n",
+    "Counts tweets for each event category.\n",
+    "\n",
+    "- job_tweets_count_by_day.py\n",
+    "\n",
+    "-Counts tweets per day."
    ]
   },
   {
@@ -1377,7 +1457,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.2"
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
