--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1290,18 +1290,24 @@
     "Firstly, we plot the language distribution of swiss tweets (we selected only the languages that exist in both swiss' and leon's datasets).\n",
     "\n",
     "\n",
-    "The scripts that were used to extract the count numbers exist under the path **ADAExercises2017/project/src/count/**\n",
+    "The scripts that were used to extract the count numbers exist under the path **project/src/count/**\n",
     "\n",
-    "The scripts under the path **ADAExercises2017/project/src/plot/** were used to plot the results obtained from the above  count scripts."
+    "The scripts under the path **project/src/plot/** were used to plot the results obtained from the above  count scripts.\n",
+    "\n",
+    "In the file event.py (**project/src/analysis/event.py**) we defined the classes Event, EventParser, in order to parse a csv file and create a list of events.\n",
+    "\n",
+    "Under the path: **project/src/plots/** we defined the class Plotter in plotter.py and the subclasses TweetsLeonPlotter and SwissTweetsPlotter, which plot language_plots for each dataset. The TweetsLeonPlotter also plots the tweets' monthly counts and the SwissTweetsPlotter the tweets' daily counts."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "***Due to the unavailability of the cluster the last days before the submission of this part of the project, we did not manage to run the analysis we had in mind for the leon tweets dataset.***\n",
+    "***Due to the unavailability of the cluster the last days before the submission of this part of the project, we did not manage to run the analysis we had in mind for the tweets leon dataset.*** \n",
     "\n",
-    "***Nevertheless, we managed to obtain useful insights from the swiss' tweets dataset. ***"
+    "We tried though to present our ideas in the best possible way. \n",
+    "\n",
+    "***Nevertheless, we managed to obtain useful insights from the swiss tweets dataset. ***"
    ]
   },
   {
@@ -1334,7 +1340,7 @@
     "\n",
     "- swiss_stats.py\n",
     "\n",
-    "Computes counts by language, counts by region, counts by sentiment, counts by day, date range\n"
+    "Computes counts by language, counts by region, counts by sentiment, counts by day, date range"
    ]
   },
   {
@@ -1348,7 +1354,59 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**The final list of events (data/swiss/events/events.csv):**\n",
+    "\n",
+    "1. Zika virus outbreak\n",
+    "2. North Korea rocket launch\n",
+    "3. Obama visit to Cuba\n",
+    "4. EgyptAir flight 804 crash\n",
+    "5. UK referendum to leave the EU\n",
+    "6. Ataturk Airport attack\n",
+    "7. Juno enters Jupiter orbit\n",
+    "8. Turkey coup attempt\n",
+    "9. Olympic Games in Rio, Brazil\n",
+    "10. Panama papers\n",
+    "11. Pokemon Go!\n",
+    "12. Montreux Jazz Festival 2016\n",
+    "13. Brussels Airport attack\n",
+    "14. Nice Bastille day attack\n",
+    "15. Burkini ban in France"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We fetched data regarding each event by running the scripts: ... "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Chapter 2: Observations about events that occured in the same month"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For each particular event of the aforementioned list we have found out:\n",
+    "\n",
+    "- The number of tweets which referred to that event per day.\n",
+    "\n",
+    "\n",
+    "- The percentage of the sentiment (NEGATIVE, NEUTRAL, POSITIVE) of each event\n",
+    "\n",
+    "\n",
+    "- "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In our website we define the data stories that we extracted "
    ]
   },
   {
@@ -1403,6 +1461,13 @@
    "metadata": {},
    "source": [
     "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Currently from the leon tweets dataset, we have only done some basic analysis regarding ****the higgs boson**** event, since the cluster has been almost unresponsive from Saturday to Tuesday. "
    ]
   },
   {
