--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1377,7 +1377,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We fetched data regarding each event by running the scripts: ... "
+    "We fetched data regarding each event by running the scripts under the path **project/src/analysis/** :\n",
+    "\n",
+    "- job_swiss_daily_tweets.py\n",
+    "\n",
+    "Counts the daily tweets for each event, the result of this job is stored in daily_counts.csv (project/data/swiss/results/)\n",
+    "\n",
+    "- job_swiss_daily_tweets_sentimental.py\n",
+    "\n",
+    "Counts the distribution of each event among the sentiments('NEGATIVE', 'NEUTRAL', 'POSITIVE', 'UNKNOWN'), the result is stored in sentimental_counts.csv (project/data/swiss/results/)"
    ]
   },
   {
@@ -1468,6 +1476,17 @@
    "metadata": {},
    "source": [
     "Currently from the leon tweets dataset, we have only done some basic analysis regarding ****the higgs boson**** event, since the cluster has been almost unresponsive from Saturday to Tuesday. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset.\n",
+    "\n",
+    "Unfortunately, a few hours before the submission the cluster runs very slowly, so we are not sure that we will provide the analysis we want on the leon dataset.\n",
+    "\n",
+    "The steps that we would use are the same as we did for the swiss tweets."
    ]
   },
   {
