--- a/project/Notebooks/Milestone2/milestone2_notebook.ipynb
+++ b/project/Notebooks/Milestone2/milestone2_notebook.ipynb
@@ -1280,6 +1280,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "To see the analysis of our project please visit our website: https://errikos.github.io/ada-showoff/"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Under the URL: https://errikos.github.io/ada-showoff/thedatasets/ we describe some useful insights we found regarding the datasets (leon and swiss tweets), with graphs and plots using Plotly."
    ]
   },
@@ -1347,6 +1354,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We fetched data regarding each event by running the scripts under the path **project/src/analysis/** :\n",
+    "\n",
+    "- job_swiss_daily_tweets.py\n",
+    "\n",
+    "Counts the daily tweets for each event, the result of this job is stored in daily_counts.csv (project/data/swiss/results/)\n",
+    "\n",
+    "- job_swiss_daily_tweets_sentimental.py\n",
+    "\n",
+    "Counts the distribution of each event among the sentiments('NEGATIVE', 'NEUTRAL', 'POSITIVE', 'UNKNOWN'), the result is stored in sentimental_counts.csv (project/data/swiss/results/)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Chapter 1: Decide on final lists of event categories and specific events to be examined"
    ]
   },
@@ -1370,29 +1392,10 @@
     "12. Montreux Jazz Festival 2016\n",
     "13. Brussels Airport attack\n",
     "14. Nice Bastille day attack\n",
-    "15. Burkini ban in France"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We fetched data regarding each event by running the scripts under the path **project/src/analysis/** :\n",
-    "\n",
-    "- job_swiss_daily_tweets.py\n",
-    "\n",
-    "Counts the daily tweets for each event, the result of this job is stored in daily_counts.csv (project/data/swiss/results/)\n",
-    "\n",
-    "- job_swiss_daily_tweets_sentimental.py\n",
-    "\n",
-    "Counts the distribution of each event among the sentiments('NEGATIVE', 'NEUTRAL', 'POSITIVE', 'UNKNOWN'), the result is stored in sentimental_counts.csv (project/data/swiss/results/)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Chapter 2: Observations about events that occured in the same month"
+    "15. Burkini ban in France\n",
+    "16. Ski\n",
+    "17. Chocolate\n",
+    "18. Macron"
    ]
   },
   {
@@ -1404,17 +1407,21 @@
     "- The number of tweets which referred to that event per day.\n",
     "\n",
     "\n",
-    "- The percentage of the sentiment (NEGATIVE, NEUTRAL, POSITIVE) of each event\n",
-    "\n",
-    "\n",
-    "- "
+    "- The percentage of the sentiment (NEGATIVE, NEUTRAL, POSITIVE) of each event"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In our website we define the data stories that we extracted "
+    "As soon as we extracted the above information, we could continue with the analysis, which is described thoroughly in our website."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Chapter 2: Observations about events that occured in the same month"
    ]
   },
   {
@@ -1461,7 +1468,20 @@
     "\n",
     "- job_tweets_count_by_day.py\n",
     "\n",
-    "-Counts tweets per day."
+    "Counts tweets per day."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- job_leon_daily_tweets.py\n",
+    "\n",
+    "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset.\n",
+    "\n",
+    "Unfortunately, a few hours before the submission the cluster runs very slowly, so we are not sure that we will provide the analysis we want on the leon dataset.\n",
+    "\n",
+    "The steps that we would use are the same as we did for the swiss tweets."
    ]
   },
   {
@@ -1476,17 +1496,6 @@
    "metadata": {},
    "source": [
     "Currently from the leon tweets dataset, we have only done some basic analysis regarding ****the higgs boson**** event, since the cluster has been almost unresponsive from Saturday to Tuesday. "
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We have run the script job_leon_daily_tweets.py (**project/src/analysis/**) to extract the data we need to perform our analysis on the tweets leon dataset.\n",
-    "\n",
-    "Unfortunately, a few hours before the submission the cluster runs very slowly, so we are not sure that we will provide the analysis we want on the leon dataset.\n",
-    "\n",
-    "The steps that we would use are the same as we did for the swiss tweets."
    ]
   },
   {
@@ -1522,6 +1531,13 @@
    "metadata": {},
    "source": [
     "### Section 3: Final conclusions"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please consult our website https://errikos.github.io/ada-showoff/ where we describe the data stories, compare the impact of some specific events and present the insights we extracted from the swiss tweets and the tweets leon datasets."
    ]
   }
  ],
